# job-resume-aligner

./: README.md  pyproject.toml  resume_modifier.py
