[tool.poetry]
name = "job-resume-aligner"
version = "0.1.0"
description = ""
authors = ["darylmathison <daryl.mathison@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Markdown = "^3.7"
openai = "^1.53.0"
dogpile-cache = "^1.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
